--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,33 @@
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:8084/pedido_db
+#    username: postgres
+#    password: Equili2000
+#    driver-class-name: org.postgresql.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update # Ou create, create-drop, none
+#    properties:
+#      hibernate:
+        #dialect: org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+
+
+server.port=8080
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/pedido_db
+spring.datasource.username=postgres
+spring.datasource.password=Equili2000
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.open-in-view=false
+
+
+spring.cloud.stream.bindings.pedidoCriado-out.destination=pedidos-criados
+spring.cloud.stream.bindings.pedidoCriado-out.contentType=application/json
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
