--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,13 @@
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:8084/pedido_db
-#    username: postgres
-#    password: Equili2000
-#    driver-class-name: org.postgresql.Driver
-#  jpa:
-#    hibernate:
-#      ddl-auto: update # Ou create, create-drop, none
-#    properties:
-#      hibernate:
-        #dialect: org.hibernate.dialect.PostgreSQLDialect
-
-
-
-
-server.port=8080
+server.port=8081
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/pedido_db
 spring.datasource.username=postgres
 spring.datasource.password=Equili2000
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.open-in-view=false
+
+spring.rabbitmq.addresses=amqps://etkcjnmp:MktJgehWaguwpuhw4Pfu4wm62_4nFiz4@jaragua.lmq.cloudamqp.com/etkcjnmp
+
+broker.queue.email.name=default.email
 
 
-spring.cloud.stream.bindings.pedidoCriado-out.destination=pedidos-criados
-spring.cloud.stream.bindings.pedidoCriado-out.contentType=application/json
-
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
