--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,14 @@ spring.datasource.username=postgres
 spring.datasource.password=Equili2000
 spring.jpa.hibernate.ddl-auto=update
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
-spring.rabbitmq.addresses=amqps://etkcjnmp:MktJgehWaguwpuhw4Pfu4wm62_4nFiz4@jaragua.lmq.cloudamqp.com/etkcjnmp
 
-broker.queue.email.name=default.email
+#spring.rabbitmq.addresses=amqps://etkcjnmp:MktJgehWaguwpuhw4Pfu4wm62_4nFiz4@jaragua.lmq.cloudamqp.com/etkcjnmp
+
+#broker.queue.email.name=default.email
 
 
