--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=fase4-pedido
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pedidof4db
+spring.datasource.username=postgres
+spring.datasource.password=Equili2000
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+#server.port=0
