--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pedidof4db
 spring.datasource.username=postgres
 spring.datasource.password=Equili2000
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 
 #eureka.client.service-url.default-zone=http://localhost:8761/eureka
