Refatoração do Mapeamento de Entidades:
Foram criados mappers mais robustos utilizando o MapStruct para garantir a conversão eficiente entre entidades de domínio, documentos MongoDB e DTOs de requisição/resposta.

Adicionados mapeamentos específicos para Pedido, Cliente, e Produto, garantindo que os dados sejam corretamente transformados entre as camadas do sistema.

Expansão do Domínio de Pedidos:

Adicionados novos status de pedido (PAGO, PROCESSANDO, ENVIADO, ENTREGUE, CANCELADO, REEMBOLSADO) para refletir melhor o ciclo de vida de um pedido.

Implementados métodos para pagar e cancelar pedidos, com atualizações de status correspondentes.

Melhoria na Comunicação entre Microsserviços:

Utilização do Feign Client para comunicação assíncrona com os microsserviços de Cliente e Produto, garantindo que os dados sejam consistentes e atualizados.

Adicionada lógica para calcular o total do pedido com base nos produtos selecionados.

Testes Unitários e de Integração:

Foram implementados testes unitários para o PedidoController, PedidoAdapter, e PedidoService, garantindo que as funcionalidades principais estejam cobertas.

Testes de integração foram adicionados para garantir que a comunicação entre os microsserviços e a persistência de dados estejam funcionando conforme o esperado.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=fase4-pedido
 
+cliente.service.url=http://localhost:8080/v1/cliente
+produto.service.url=http://localhost:8081/v1/produto
+
 spring.data.mongodb.uri=mongodb://localhost:27017/fase4pedido
 
 server.port=8082
