Adicionadas configurações, e correções de endpoint.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,22 @@ spring.application.name=fase4-pedido
 cliente.service.url=http://localhost:8080/v1/cliente
 produto.service.url=http://localhost:8081/v1/produto
 
-spring.data.mongodb.uri=mongodb://localhost:27017/fase4pedido
+spring.data.mongodb.uri=mongodb://localhost:27019/fase4pedido
 
 server.port=8082
+
+spring.cloud.stream.function.definition=pedidoPago
+
+spring.cloud.stream.bindings.pedidoPago-out-0.destination=pedidos.novos
+spring.cloud.stream.bindings.pedidoPago-out-0.content-type=application/json
+spring.cloud.stream.bindings.pedidoPago-out-0.group=pedido-service
+
+spring.cloud.stream.defaultBinder=rabbit
+spring.cloud.stream.binders.rabbit.type=rabbit
+
+
+spring.cloud.stream.rabbit.binder.brokers=rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
